--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,7 +16,6 @@ on:
         required: false
         default: "9999"
 
-# --- 複数Run衝突防止 ---
 concurrency:
   group: scrape-${{ github.ref }}
   cancel-in-progress: false
@@ -32,18 +31,15 @@ jobs:
       TARGET_URLS: ${{ inputs.target_urls }}
       OUTPUT_DIR: "output"
 
-      # --- MySQL接続情報 ---
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASS: ${{ secrets.DB_PASS }}
       DB_NAME: ${{ secrets.DB_NAME }}
 
-      # --- SSH接続情報 ---
       SSH_HOST: ${{ secrets.SSH_HOST }}
       SSH_PORT: ${{ secrets.SSH_PORT }}
       SSH_USER: ${{ secrets.SSH_USER }}
 
     steps:
-      # ===== GitHub Actions 標準手順 =====
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -65,7 +61,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 pandas sqlalchemy pymysql
 
-      # ===== SSHトンネル作成 =====
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
@@ -85,7 +80,6 @@ jobs:
           sleep 5
           echo "✅ SSH tunnel established (port 3307)"
 
-      # ===== スクレイピング対象を確認 =====
       - name: Show targets and save plan
         run: |
           set -e
@@ -106,11 +100,9 @@ jobs:
           head -n 20 output/targets.txt || true
           wc -l output/targets.txt || true
 
-      # ===== メインスクレイパー実行 =====
       - name: Run scraper (MySQL mode)
-        run: python beauty/scripts/scrape.py
+        run: python scripts/scrape.py
 
-      # ===== 結果出力（CSV/JSON） =====
       - name: Upload artifact
         if: always()
         uses: actions/upload-artifact@v4
@@ -122,7 +114,6 @@ jobs:
             output/*.txt
           if-no-files-found: warn
 
-      # ===== SSHログ出力 =====
       - name: Show SSH logs
         if: always()
         run: cat tunnel.log || true
