--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,4 +1,4 @@
-name: Scrape to MySQL (via SSH)
+name: Scrape to Google Sheets
 
 on:
   workflow_dispatch:
@@ -12,9 +12,17 @@ on:
         required: false
         default: "1"
       end_id:
-        description: "End clinic ID (e.g. 9999). Ignored if target_urls is set."
+        description: "End clinic ID (e.g. 100). Ignored if target_urls is set."
         required: false
-        default: "9999"
+        default: "100"
+      write_settings_sheet:
+        description: "Write settings sheet? (true/false)"
+        required: false
+        default: "true"
+      write_targets_sheet:
+        description: "Write targets sheet? (true/false)"
+        required: false
+        default: "true"
 
 concurrency:
   group: scrape-${{ github.ref }}
@@ -29,15 +37,15 @@ jobs:
       START_ID: ${{ inputs.start_id }}
       END_ID: ${{ inputs.end_id }}
       TARGET_URLS: ${{ inputs.target_urls }}
+      WRITE_SETTINGS_SHEET: ${{ inputs.write_settings_sheet }}
+      WRITE_TARGETS_SHEET: ${{ inputs.write_targets_sheet }}
       OUTPUT_DIR: "output"
 
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASS: ${{ secrets.DB_PASS }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-
-      SSH_HOST: ${{ secrets.SSH_HOST }}
-      SSH_PORT: ${{ secrets.SSH_PORT }}
-      SSH_USER: ${{ secrets.SSH_USER }}
+      GSHEET_JSON_B64: ${{ secrets.GSHEET_JSON_B64 }}
+      GSHEET_KEY: ${{ secrets.GSHEET_KEY }}
+      CLINICS_SHEET_NAME: "clinics"
+      MENUS_SHEET_NAME: "menus"
+      HOURS_SHEET_NAME: "hours"
 
     steps:
       - name: Checkout repository
@@ -59,48 +67,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 pandas sqlalchemy pymysql
+          pip install -r requirements.txt
 
-      - name: Setup SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      - name: Create SSH tunnel
-        run: |
-          echo "Opening SSH tunnel to ${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }} ..."
-          nohup ssh -i ~/.ssh/id_rsa \
-            -p ${{ secrets.SSH_PORT }} \
-            -o ServerAliveInterval=60 \
-            -o ExitOnForwardFailure=yes \
-            -N -L 3307:127.0.0.1:3306 \
-            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} > tunnel.log 2>&1 &
-          sleep 5
-          echo "✅ SSH tunnel established (port 3307)"
-
-      - name: Show targets and save plan
-        run: |
-          set -e
-          mkdir -p output
-          if [ -n "${TARGET_URLS// }" ]; then
-            echo "Using TARGET_URLS input"
-            echo "${TARGET_URLS}" | tr ',\r' '\n' | sed 's/^[ \t]*//;s/[ \t]*$//' | grep -E '^https?://' | sort -u > output/targets.txt
-          else
-            echo "Using START_ID..END_ID"
-            start=${START_ID:-1}
-            end=${END_ID:-9999}
-            : > output/targets.txt
-            for ((i=start; i<=end; i++)); do
-              printf "https://kireireport.com/clinics/%04d\n" "$i" >> output/targets.txt
-            done
-          fi
-          echo "Planned targets:"
-          head -n 20 output/targets.txt || true
-          wc -l output/targets.txt || true
-
-      - name: Run scraper (MySQL mode)
+      - name: Run scraper (Google Sheets mode)
         run: python scripts/scrape.py
 
       - name: Upload artifact
@@ -113,7 +82,3 @@ jobs:
             output/*.json
             output/*.txt
           if-no-files-found: warn
-
-      - name: Show SSH logs
-        if: always()
-        run: cat tunnel.log || true
